Fixed modal overflow-y error

--- a/css/parents-evening-v0.1.css
+++ b/css/parents-evening-v0.1.css
@@ -96,6 +96,8 @@ h1, h2, h3, h4, h5, h6
 /* MODAL */
 
 /* Sets space between edges of viewport */
+.modal { overflow: auto !important; }
+
 .modal-body
 {
 	margin: 1em;
